[package]
name = "luna_nbt"
description = "Another library for Minecraft's Named Binary Tag (NBT) format."
version = "0.0.3"
keywords = ["nbt", "minecraft", "format", "serde", "binary"]
authors = ["Sam Huddart <sam.fucked.up@samh.dev>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/samhdev/luna_nbt"

[lib]
name = "nbt"
path = "src/lib.rs"
bench = false

[features]
with_serde = ["serde"]
serde_boolean = []
serde_unsigned = []
default = ["with_serde", "serde_boolean"]

[dependencies]
byteorder = "^1.4.2"
cesu8 = "1.1.0"
serde = {version = "^1.0.123", optional=true }

[dev-dependencies]
serde = {version = "^1.0.123", features=["derive"] }